Added tox configuration and coverage, option for saving output to a file, cleaning up exceptions and logging, tested with Python 3.8, lower failed number, higher default number of threads

--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,32 @@
+[tox]
+envlist =
+    py38,py39,py310,report
+
 [pytest]
-addopts = -ra -q
 testpaths =
     tests
+addopts =
+    -p no:warnings
+
+[testenv]
+setenv =
+    py{38,39,310}: COVERAGE_FILE = .coverage.{envname}
+commands =
+    pytest -q --cov {posargs:-vv}
+deps =
+    pytest
+    coverage
+    pytest-docker
+    pytest-cov
+depends =
+    report: py38,py39,py310
+
+[testenv:report]
+skip_install =
+    true
+deps =
+    coverage
+commands =
+    coverage combine
+    coverage html
+    coverage report
